updated styling bugs with scroll bars visible

--- a/src/pages/Homepage/about.css
+++ b/src/pages/Homepage/about.css
@@ -24,9 +24,12 @@
 
 .aboutpage-about-container {
     overflow-y: scroll;
+    overflow-x: hidden;
+    scrollbar-width: 0;
+    scrollbar-track-color: transparent;
     text-align: justify;
     border: 2px solid transparent;
-    box-shadow: 0 0 10px 0 rgba(255, 255, 255, 0.4);
+    /* box-shadow: 0 0 10px 0 rgba(255, 255, 255, 0.4); */
     padding: 0 1.2rem;
     height: 70%;
 }
@@ -67,7 +70,7 @@
     .aboutpage-left {
         width: 100%;
         height: 100vh;
-        margin-top:7rem;
+        margin-top: 7rem;
     }
 
     .aboutpage-headshot-mobile {
