--- a/src/pages/Homepage/projects.css
+++ b/src/pages/Homepage/projects.css
@@ -9,8 +9,8 @@
 }
 
 .project-container {
-    display: flex; 
-    align-items: center; 
+    display: flex;
+    align-items: center;
     border: 2px solid #fff;
 }
 
@@ -35,7 +35,6 @@
 
 .project-card-inner-container {
     height: 100%;
-    overflow-y: scroll;
     padding: 1rem 0;
 }
 
